Fixed z-index of top-drawer.

--- a/css/article.css
+++ b/css/article.css
@@ -395,6 +395,7 @@ BODY {
   margin-right: auto;
   padding: 16px 8px 8px 8px;
   transition: top 0.5s ease-out;
+  z-index: 3;
 }
 
 #top-drawer INPUT {
